test/should_fail/map_literal.erl
-module(map_literal).
-export([f/0]).

-spec f() -> ok.
f() -> #{apa => bepa}.
